Imported from https://henry118@github.com/henry118/go-fuse.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = FUSE bindings for Go
+[access "refs/*"]
+	owner = group user/Henry Wang (henry118)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Henry Wang (henry118)
+	label-Verified = -1..+1 group user/Henry Wang (henry118)
+	push = group user/Henry Wang (henry118)
+	read = group user/Henry Wang (henry118)
+	rebase = group user/Henry Wang (henry118)
+	removeReviewer = group user/Henry Wang (henry118)
+	submit = group user/Henry Wang (henry118)
+[access "refs/heads/*"]
+	create = group user/Henry Wang (henry118)
+	push = +force group user/Henry Wang (henry118)
+	pushMerge = group user/Henry Wang (henry118)
+	read = group user/Henry Wang (henry118)
+[access "refs/tags/*"]
+	push = group user/Henry Wang (henry118)
+	push = +force group user/Henry Wang (henry118)
